[gd_scene load_steps=9 format=3 uid="uid://dy13h71ncmsfe"]

[ext_resource type="Script" path="res://UI/Script/pause_menu.gd" id="1_h03i7"]
[ext_resource type="FontFile" uid="uid://ciuabl015y5ch" path="res://UI/Fonts/coolvetica rg.otf" id="2_r4wo5"]
[ext_resource type="Material" uid="uid://bmbmn8md4n2tv" path="res://Materials/HexMaterial.tres" id="3_68idn"]
[ext_resource type="Texture2D" uid="uid://d2kon1qanlf7j" path="res://UI/images/GUI/MainPanel01.png" id="4_ivbv7"]
[ext_resource type="Theme" uid="uid://f6vcws1rdpjs" path="res://UI/Script/Pause_Theme.tres" id="4_we5wl"]
[ext_resource type="PackedScene" uid="uid://ddge3a6at76fv" path="res://UI/Scenes/Setting/settings_page_PauseMenu.tscn" id="6_lcg25"]
[ext_resource type="AudioStream" uid="uid://b2ixuguv5socj" path="res://Audio/SFX/WAV/Minimalist7.wav" id="6_nb5te"]
[ext_resource type="AudioStream" uid="uid://dpcfa6aw4eers" path="res://Audio/SFX/WAV/Wood Block3.wav" id="7_l2qps"]

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h03i7")

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel01" type="Sprite2D" parent="Control2"]
position = Vector2(20.375, 30.065)
scale = Vector2(0.282864, 0.692353)
texture = ExtResource("4_ivbv7")

[node name="Control" type="Control" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
z_index = -3
material = ExtResource("3_68idn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="ColorRect" type="ColorRect" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.188235, 0.372549, 0.305882)
metadata/_edit_lock_ = true

[node name="Resume" type="HBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -104.505
offset_right = 80.0
offset_bottom = -53.505
grow_horizontal = 2
grow_vertical = 2

[node name="Resume button" type="Button" parent="Resume"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("4_we5wl")
theme_override_fonts/font = ExtResource("2_r4wo5")
theme_override_font_sizes/font_size = 42
text = " Resume "

[node name="Restart" type="HBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -36.98
offset_right = 80.0
offset_bottom = 14.02
grow_horizontal = 2
grow_vertical = 2

[node name="Restart Button" type="Button" parent="Restart"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("4_we5wl")
theme_override_fonts/font = ExtResource("2_r4wo5")
theme_override_font_sizes/font_size = 42
text = " Restart "

[node name="Quit" type="HBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.69
offset_top = 85.995
offset_right = 64.31
offset_bottom = 158.995
grow_horizontal = 2
grow_vertical = 2

[node name="Quit Button" type="Button" parent="Quit"]
z_index = 1
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("4_we5wl")
theme_override_fonts/font = ExtResource("2_r4wo5")
theme_override_font_sizes/font_size = 42
text = " Quit "

[node name="Settings" type="HBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.69
offset_top = 18.53
offset_right = 103.31
offset_bottom = 91.53
grow_horizontal = 2
grow_vertical = 2

[node name="Setting Button" type="Button" parent="Settings"]
z_index = 1
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("4_we5wl")
theme_override_fonts/font = ExtResource("2_r4wo5")
theme_override_font_sizes/font_size = 42
text = " Settings "

[node name="Settings_Page" parent="." instance=ExtResource("6_lcg25")]
visible = false
z_index = 4
layout_mode = 1

[node name="Sounds" type="Node2D" parent="."]

[node name="Hover" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_nb5te")
volume_db = 20.0
panning_strength = 0.0
bus = &"SoundEffects"

[node name="Select" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_l2qps")
volume_db = 5.66
pitch_scale = 1.2
panning_strength = 0.0
bus = &"SoundEffects"

[connection signal="mouse_entered" from="Resume/Resume button" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="Resume/Resume button" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="Restart/Restart Button" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="Restart/Restart Button" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="Quit/Quit Button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Quit/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="Settings/Setting Button" to="." method="_on_setting_button_mouse_entered"]
[connection signal="pressed" from="Settings/Setting Button" to="." method="_on_setting_button_pressed"]
